--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "express-load": "^1.1.16",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
